syntax = "proto3";
package com.hitachivantara.proto;
option java_package = "com.hitachivantara.proto";


message eventMessages {

    message Actor {
        uint64 id = 1;
        string login = 2;
        string display_login = 3;
        string gravatar_id = 4;
        string url = 5;
        string avatar_url = 6;
    }

    message Repo {
        uint64 id = 1;
        string name = 2;
        string url = 3;
    }


    string id = 1;
    string type = 2;
    Actor actor = 3;
    Repo repo = 4;
    string payload = 5;
    bool public = 6;
    string created_at = 7;
}